dark mode fixes, gallery images, footer links, header menu active color

--- a/src/assets/sass/gallery.scss
+++ b/src/assets/sass/gallery.scss
@@ -6,13 +6,14 @@
 // ─────────────────────────────────────────────────────────────────────────────
 
 /*-- -------------------------- -->
-<---       Side By Side         -->
+<---       Gallery Page         -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #RPsbs-313 {
+  #Gallery-Page {
     padding: var(--sectionPadding);
+    position: relative;
 
     .cs-container {
       width: 100%;
@@ -20,88 +21,55 @@
       margin: auto;
       display: flex;
       flex-direction: column;
+      align-items: center;
       /* 48px - 64px */
       gap: clamp(3rem, 6vw, 4rem);
     }
 
     .cs-content {
       /* set text align to left if content needs to be left aligned */
-      text-align: left;
+      text-align: center;
       width: 100%;
-      max-width: calc(542 / 16 * 1rem);
       display: flex;
       flex-direction: column;
       /* centers content horizontally, set to flex-start to left align */
-      align-items: flex-start;
+      align-items: center;
     }
 
-    .cs-text {
-      margin-bottom: calc(16 / 16 * 1rem);
-      &:last-of-type {
-        margin-bottom: calc(32 / 16 * 1rem);
-      }
-    }
-
-    .cs-quote {
-      margin: 0 0 calc(32 / 16 * 1rem) 0;
-      /* 16px - 32px */
-      padding: clamp(1rem, 3vw, 2rem);
-      background-color: #f7f7f7;
-      border-radius: calc(16 / 16 * 1rem);
-      position: relative;
-    }
-
-    .cs-quote-text {
-      /* 14px - 16px */
-      font-size: clamp(0.875rem, 1.5vw, 1rem);
-      line-height: 1.5em;
-      margin: 0 0 calc(16 / 16 * 1rem);
-      color: #767676;
-      display: block;
-    }
-
-    .cs-name {
-      font-size: calc(16 / 16 * 1rem);
-      line-height: 1.2em;
-      text-transform: uppercase;
-      font-weight: bold;
-      margin: 0 0 calc(4 / 16 * 1rem);
-      color: var(--headerColor);
-      display: block;
-    }
-
-    .cs-job {
-      font-size: calc(14 / 16 * 1rem);
-      line-height: 1.5em;
-      color: #767676;
-      display: block;
-    }
-
-    .cs-quote-icon {
-      /* 60px - 136px */
-      width: clamp(3.75rem, 10vw, 8.5rem);
-      height: auto;
-      position: absolute;
-      bottom: calc(0 / 16 * 1rem);
-      /* 16px - 32px */
-      right: clamp(1rem, 4vw, 2rem);
+    .cs-title {
+      margin: 0;
+      max-width: 20ch;
     }
 
     .cs-image-group {
-      /* scaling the font size with the view width */
-      font-size: min(2.31vw, 0.7em);
-      /* using ems so we can use font size to scale the whole section */
-      width: calc(631 / 16 * 1em);
-      height: calc(636 / 16 * 1em);
-      position: relative;
+      /* used rem so it doesn't scale with the font size of on parent */
+      font-size: min(1.1vw, 1em);
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      /* 8px - 20px */
+      gap: clamp(0.5rem, 2vw, 1.25rem);
+    }
+
+    .cs-row {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      /* 8px - 20px */
+      gap: clamp(0.5rem, 2vw, 1.25rem);
     }
 
     .cs-picture {
-      border-radius: calc(24 / 16 * 1em);
-      /* clips img tag corners */
-      overflow: hidden;
-      position: absolute;
+      width: 100%;
+      position: relative;
       display: block;
+      border-radius: calc(8 / 16 * 1rem);
+      overflow: hidden;
 
       img {
         position: absolute;
@@ -109,91 +77,49 @@
         left: 0;
         height: 100%;
         width: 100%;
-        /* makes image act like a background image */
         object-fit: cover;
       }
     }
 
-    .cs-picture1 {
-      width: calc(522 / 16 * 1em);
-      height: calc(581 / 16 * 1em);
-      left: 0;
-      top: 0;
+    .cs-row-1 {
+      .cs-picture-1 {
+        height: calc(567 / 16 * 1em);
+      }
+
+      .cs-picture-2 {
+        height: calc(629 / 16 * 1em);
+      }
+
+      .cs-picture-3 {
+        height: calc(512 / 16 * 1em);
+      }
     }
 
-    .cs-picture2 {
-      width: calc(414 / 16 * 1em);
-      height: calc(400 / 16 * 1em);
-      background-color: #fff;
-      box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 40px;
-      /* 6px - 12px */
-      border: clamp(0.375em, 1.5vw, 0.75em) solid #fff;
-      right: 0;
-      bottom: 0;
-    }
-  }
-}
+    .cs-row-2 {
+      .cs-picture-1 {
+        height: calc(492 / 16 * 1em);
+      }
 
-/* Desktop - 1024px */
-@media only screen and (min-width: 64rem) {
-  #RPsbs-313 {
-    .cs-container {
-      flex-flow: row;
-      justify-content: space-between;
-      gap: calc(52 / 16 * 1rem);
+      .cs-picture-2 {
+        height: calc(517 / 16 * 1em);
+      }
+
+      .cs-picture-3 {
+        height: calc(629 / 16 * 1em);
+      }
     }
 
-    .cs-image-group {
-      font-size: min(1.2vw, 1em);
-      flex: none;
-    }
-
-    .cs-content {
-      margin: 0;
-    }
-  }
-}
-
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-  body.dark-mode {
-    #RPsbs-313 {
-      .cs-image-group {
-        &:before,
-        &:after {
-          background: var(--accent);
-        }
+    .cs-row-3 {
+      .cs-picture-1 {
+        height: calc(625 / 16 * 1em);
       }
 
-      .cs-picture2 {
-        background-color: var(--dark);
-        /* 6px - 12px */
-        border: clamp(0.375em, 1.5vw, 0.75em) solid var(--dark);
+      .cs-picture-2 {
+        height: calc(452 / 16 * 1em);
       }
 
-      .cs-topper {
-        color: var(--primaryLight);
-      }
-
-      .cs-title,
-      .cs-text,
-      .cs-h3,
-      .cs-quote-text,
-      .cs-name {
-        color: var(--bodyTextColorWhite);
-      }
-
-      .cs-quote {
-        background-color: var(--accent);
-      }
-
-      .cs-job {
-        color: var(--bodyTextColorWhite);
-        opacity: 0.8;
-      }
-
-      .cs-quote-icon {
-        opacity: 0.2;
+      .cs-picture-3 {
+        height: calc(629 / 16 * 1em);
       }
     }
   }
